Bug 433034 - "Breeze" is a bad choice as the default task switcher
Summary: "Breeze" is a bad choice as the default task switcher
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Theme packages (other bugs)
Version First Reported In: 5.26.3
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
: 434637 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-16 22:25 UTC by Dan Dascalescu
Modified: 2023-05-08 12:22 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Dascalescu 2021-02-16 22:25:41 UTC
I found the default task switcher, Breeze, to suffer from significant ergonomic issues if the goal is to switch task rapidly:

1. It forces the user to focus away from the center of the screen, which is a bigger problem the wider the monitor is

2. It only shows a limited number of tiled windows in the left side of the screen, forcing the user to *scroll* (horrible)

3. It requires scanning a visually large area (especially on portrait monitors) to identify the task to switch to.

4. It looks very different from other task switchers found in other DEs. For new Plasma users, this will be confusing (at least) and for experienced one, who know what they want, it will be just one more thing to change.

Out of all the default task switchers, Thumbnails Grid is the most ergonomic in my opinion, and I would like to suggest it as the default:

* shows window previews...
* ...that fit on one screen...
* ...in a compact area
* ...with application names and cons
Comment 1 David Edmundson 2021-02-17 01:21:38 UTC
There is some vdg proposal to change the default. Please follow there.

Personal preferences on defaults do not make for bug reports as we always have someone with an alternative opinion.
Comment 2 Dan Dascalescu 2021-02-17 01:42:12 UTC
A personal preference would be "I don't like Breeze, idk why". I tried to justify my report with specific points. Would it have made any difference if I had filed points 1-3 as wishlists, e.g. "Default task switcher requires extra user interaction to see more than a small number of task windows"?

I couldn't find that VDG proposal, but I cross-posted at https://forum.kde.org/viewtopic.php?f=285&t=170098.
Comment 3 Nate Graham 2021-02-19 15:49:44 UTC
See https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/510/. The discussion seems to have gotten stalled, so feel free to comment there.

FWIW I think this bug report is fairly well articulated and not so much in the realm of personal preference. The reasons given for the Breeze Task Switcher being sub-optimal seem quite reasonable and objective.
Comment 4 Nate Graham 2021-03-21 00:55:01 UTC
*** Bug 434637 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2023-05-06 16:18:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/379
Comment 6 Nate Graham 2023-05-07 12:40:10 UTC
Git commit 1401c4369eaca3da6922c3743d53b72a109ba4e2 by Nate Graham.
Committed on 07/05/2023 at 12:37.
Pushed by ngraham into branch 'master'.

Improve Thumbnail Grid Task Switcher

Currently the layout is a bit visually busy and draws your focus all
over the place. This commit makes the grid delegates use basically the
same layout as the popular window delegates in the Overview and Present
Windows effects:
- Centered window title
- Large app icon overlaid on the bottom center of the thumbnail
- close button only appears for the focused and/or hovered item

The result is better visual parse-ability, particularly for people who
prefer to navigate by app icon rather than thumbnail image.

M  +42   -31   windowswitchers/thumbnail_grid/contents/ui/main.qml

https://invent.kde.org/plasma/kdeplasma-addons/commit/1401c4369eaca3da6922c3743d53b72a109ba4e2
Comment 7 Bug Janitor Service 2023-05-08 11:12:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4074
Comment 8 Nate Graham 2023-05-08 12:22:55 UTC
Git commit 3ca1fc800d7f7d8b36a3ec5436f644439c6f0146 by Nate Graham.
Committed on 08/05/2023 at 12:12.
Pushed by ngraham into branch 'master'.

Make "Thumbnail Grid" the default Task Switcher and make it live here

Per https://invent.kde.org/plasma/plasma-desktop/-/issues/53, we're
making an overhauled version of the Thumbnail Grid Task Switcher the
default one in Plasma 6.

Currently the default Task Switcher is specified as the "Breeze" Task
Switcher which isn't ideal since it doesn't live in this repo, and it's
possible to use KWin without Plasma, where it does live.

So as a part of making Thumbnail Grid the new default Task Switcher,
let's also move it here so that KWin's default Task Switcher is always
available.

This commit grabs the Thumbnail Grid Task Switcher verbatim from where
it currently lives in the kdeplasma-addons-repo as of commit
54d16f44a56530854444b844536933a3107ef8a6.
FIXED-IN: 6.0

M  +1    -0    src/CMakeLists.txt
M  +1    -1    src/kwin.kcfg
A  +6    -0    src/tabbox/switchers/CMakeLists.txt
A  +225  -0    src/tabbox/switchers/thumbnail_grid/contents/ui/main.qml     [License: GPL(v2.0+)]
A  +132  -0    src/tabbox/switchers/thumbnail_grid/metadata.json
M  +1    -1    src/tabbox/tabboxconfig.h
M  +1    -1    src/tabbox/tabboxhandler.cpp

https://invent.kde.org/plasma/kwin/commit/3ca1fc800d7f7d8b36a3ec5436f644439c6f0146